--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -56,8 +56,9 @@
 
     <!-- main2 groundslist -->
     <div class="main2">
-    <div class="parent">
-      <div class="child">
+       
+  <div class="parent">
+      <!-- <div class="child">
          <br>
          <a href="../../pages/bookinground/ground1.html">
             <h3 class="groundn">DNS TURF</h3><br>
@@ -73,6 +74,7 @@
             <i class="fa-solid fa-star"></i>
             <span class="ratingno">5.0</span>
             </div>
+            <a href="../../pages/bookinground/ground1.html"><button class="book">Book Now</button></a>
             </a>          
        </div>
             
@@ -82,7 +84,6 @@
                 <h3 class="groundn">Pitch and Play</h3> <br>
                 <img class="groimg" src="../../assets/images/ground2.JPG" alt="Pitch and Play"> <br>
                 <p class="locationn">Annasalai</p>
-                <a href="../../pages/bookinground/ground2.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png"alt="sportsicon">
@@ -92,6 +93,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">5.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground2.html"> <button class="book">Book Now</button></a>
                 </a>
     </div>
 
@@ -101,7 +103,6 @@
                 <h3 class="groundn">Sports Sanity FC Marina</h3> <br>
                 <img class="groimg" src="../../assets/images/ground3.jpg" alt="Sports Sanity FC Marina"> <br>
                 <p class="locationn">Kilpauk</p>
-                <a href="../../pages/bookinground/ground3.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png"alt="sportsicon">
@@ -111,6 +112,7 @@
                 <i class="fa-solid fa-star"></i>
                 <span class="ratingno">4.9</span>
                 </div>
+                <a href="../../pages/bookinground/ground3.html"> <button class="book">Book Now</button></a>
                 </a>
     </div>
             <div class="child">
@@ -119,7 +121,6 @@
                 <h3 class="groundn">HotFut SPR City</h3> <br>
                 <img class="groimg" src="../../assets/images/ground4.jpg" alt="HotFut SPR City"> <br>
                 <p class="locationn">Perambur</p>
-                <a href="../../pages/bookinground/ground4.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png"alt="sportsicon">
@@ -129,6 +130,7 @@
                 <i class="fa-solid fa-star"></i>
                 <span class="ratingno">4.6</span>
                 </div>
+                <a href="../../pages/bookinground/ground4.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -138,8 +140,7 @@
             <h3 class="groundn">Revolt theTurfWar</h3> <br>
             <img class="groimg" src="../../assets/images/ground5.jpg" alt="Revolt theTurfWar"> <br>
             <p class="locationn">Perambur</p>
-            <a href="../../pages/bookinground/ground5.html"> <button class="book">Book Now</button></a></li>
-            <div class="symbol">
+          <div class="symbol">
             <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
             <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
             <img class="sportsicon" src="../../assets/images/tennisicon.png" alt="sportsicon">
@@ -149,6 +150,7 @@
             <i class="fa-solid fa-star"></i>
             <span class="ratingno">4.5</span>
                 </div>
+                <a href="../../pages/bookinground/ground5.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -158,7 +160,6 @@
                 <h3 class="groundn">Seven Eleven's Turf</h3> <br>
                 <img class="groimg" src="../../assets/images/ground6.jpg" alt="Seven Eleven's Turf"> <br>
                 <p class="locationn">Kasi theatre</p>
-                <a href="../../pages/bookinground/ground6.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -168,6 +169,7 @@
                 <i class="fa-solid fa-star"></i>
                  <span class="ratingno">4.4</span>
                 </div>
+                <a href="../../pages/bookinground/ground6.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
             <div class="child">
@@ -176,7 +178,6 @@
                 <h3 class="groundn">Sky Arena</h3> <br>
                 <img class="groimg" src="../../assets/images/ground7.jpg" alt="Sky Arena"> <br>
                 <p class="locationn">Bengaluru Shivaji Nagar</p>
-                <a href="../../pages/bookinground/ground7.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -186,6 +187,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.4</span>
                 </div>
+                <a href="../../pages/bookinground/ground7.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -195,7 +197,6 @@
                 <h3 class="groundn">Tiento Sports</h3> <br>
                 <img class="groimg" src="../../assets/images/ground8.jpg" alt="Tiento Sports"> <br>
                 <p class="locationn">Bengaluru Sudhama Nagar</p>
-                <a href="../../pages/bookinground/ground8.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png"alt="sportsicon">
@@ -205,6 +206,7 @@
                 <i class="fa-solid fa-star"></i>
                 <span class="ratingno">4.2</span>
                 </div>
+                <a href="../../pages/bookinground/ground8.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
             <div class="child">
@@ -213,7 +215,6 @@
                 <h3 class="groundn">Fusion The Turf</h3> <br>
                 <img class="groimg" src="../../assets/images/ground9.jpg" alt="Fusion The Turf"> <br>
                 <p class="locationn">Bengaluru Langford Gardens</p>
-                <a href="../../pages/bookinground/ground9.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -224,6 +225,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.2</span>
                 </div>
+                <a href="../../pages/bookinground/ground9.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -233,7 +235,6 @@
                 <h3 class="groundn">Kovai Arena - Football Turf</h3> <br>
                 <img class="groimg" src="../../assets/images/ground10.jpg" alt="Kovai Arena - Football Turf"> <br>
                 <p class="locationn">Udayampalayam</p>
-                <a href="../../pages/bookinground/ground10.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -245,6 +246,7 @@
                     <span class="ratingno">4.2</span>
                 </div>
                 </a>
+                <a href="../../pages/bookinground/ground10.html"> <button class="book">Book Now</button></a>
             </div>
 
             <div class="child">
@@ -253,7 +255,6 @@
                 <h3 class="groundn">Sport Fit Arena</h3> <br>
                 <img class="groimg" src="../../assets/images/ground11.jpg" alt="Sport Fit Arena"> <br>
                 <p class="locationn">Elappully</p>
-                <a href="../../pages/bookinground/ground11.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -265,6 +266,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground11.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -274,7 +276,6 @@
                 <h3 class="groundn">Turf Time</h3> <br>
                 <img class="groimg" src="../../assets/images/ground12.jpg" alt="Turf Time"> <br>
                 <p class="locationn">Salem</p>
-                <a href="../../pages/bookinground/ground12.html"> <button class="book">Book Now</button></a></li>
                 <div class="symbol">
                 <img class="sportsicon" src="../../assets/images/cricketicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
@@ -285,6 +286,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground12.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -305,6 +307,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground13.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -325,6 +328,7 @@
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno">4.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground14.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>
 
@@ -345,9 +349,10 @@
                  <i class="fa-solid fa-star"></i>
                  <span class="ratingno">4.0</span>
                 </div>
+                <a href="../../pages/bookinground/ground15.html"> <button class="book">Book Now</button></a>
                 </a>
-            </div>
-        </div>
+            </div>    -->
+        </div> 
 
 
 
@@ -384,6 +389,8 @@
         </div>
     </footer>
 <!-- footer -->
+<script src="../bookground.js"> </script>
+
 </body>
 
 </html>
