--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -2,47 +2,67 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
+  <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 
 <body>
-    <!-- signin container -->
-    <div id="container">
-        <!-- signinform -->
+  <!-- signin container -->
+  <div id="container">
+    <!-- signinform -->
     <div class="forms">
-    <h1 class="sign">Sign in</h1>
-    <form>
-    <input type="email" placeholder="Email address " id="email" aria-label="email" ><br>
-    <input type="password" placeholder="Password" id="password" aria-label="password"><br>
-    <!-- <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button" ></a> -->
-    <button id="login" type="button" onclick="getData()">Login</button><br>
-    <a class="fp" href="#">Forget password</a><br>
-    <p class="newsign">New user</p><br>
-    <!-- <button id="newlogin" type="button" onclick="getData()">Create New Account</button><br> -->
-    <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin" aria-label="button"></a><br>
-     </form>
-          <!-- signinform -->
+      <h1 class="sign">Sign in</h1>
+      <form id="loginform">
+        <input type="email" placeholder="Email address " id="email" aria-label="email"><br>
+        <input type="password" placeholder="Password" id="password" aria-label="password"><br>
+        <!-- <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button" ></a> -->
+        <button id="login" type="submit"  onclick="getData()">Login</button><br>
+        <a class="fp" href="#">Forget password</a><br>
+        <p class="newsign">New user</p><br>
+        <!-- <button id="newlogin" type="button" onclick="getData()">Create New Account</button><br> -->
+        <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin"
+            aria-label="button"></a><br>
+      </form>
+      <!-- signinform -->
     </div>
-     <!-- signin container -->
+    <!-- signin container -->
 
 
-    </div>
-    <script>
-   function getData(){
-        const email = (document.getElementById("email").value )
-        const password = (document.getElementById("password").value )
-        console.log(email)
-        console.log(password)
-        localStorage.setItem("userEmail",email)
-        localStorage.setItem("userpassword",password)
-        window.location.href="../../index.html"
-    }
-    </script>
+  </div>
+  <script>
+    function getData(){
+      const email = (document.getElementById("email").value)
+          const user_password = (document.getElementById("password").value)
+          const arrayConvert =JSON.parse(localStorage.getItem("user_details"));
+          
+          let userCollect;
+          arrayConvert.find(element =>{
+          if (element ["user_email"]==email && element ["user_password"]==user_password   ){
+            return  userCollect=1;
+          }
+          else{
+            return userCollect=0
+          }
+        });
+
+        if(userCollect==1){
+          window.location.href="../../index.html"
+          alert("login success");
+           
+        }
+        else{
+          alert("login failure");
+        }
+    console.log(email);
+console.log(user_password);  
+}
+
+
+  </script>
 </body>
 
 </html>
