--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -41,16 +41,17 @@
 
 <!-- main2 -->
 <div class="main2">
-<div class="bar">
+<!--   
+<div class="bar"> -->
 <!-- sidebar1 -->
-   <div class="sidebar1">
+   <!-- <div class="sidebar1">
    <div class="box1">
   <h2>DNF TURF</h2>
   <p class="place">Vyarsarpadi</p>
-   </div>
+   </div> -->
   
    <!-- image slider -->
-   <div class="containerslider">
+   <!-- <div class="containerslider">
 <div class="images">
   <input type="radio" name="slides" id="images1" checked>
   <input type="radio" name="slides" id="images2">
@@ -68,75 +69,75 @@
 
    </div><br><br>
 
+  -->
  
- 
- <div class="box2">
+ <!-- <div class="box2"> -->
     <!-- location -->
-   <div class="locationinfo">
+   <!-- <div class="locationinfo">
   <h3>Location</h3>   
   <a aria-label="location" href="https://goo.gl/maps/YB4zbcWExPUTbGFT6"><i class="fa-solid fa-location-dot"></i></a>
   <p> Sri rajpurohit complex, 1/340, West Ave, MKB Nagar, Vyasarpadi, Chennai, Tamil Nadu 600039</p>
- </div><br>
+ </div><br> -->
  <!-- location -->
   <!-- sports available -->
-  <div class="sportsavail">
+  <!-- <div class="sportsavail">
   <h2>Sports Available</h2>
   <div class="symbol">
   <img class="sportsicon"src="../../assets/images/cricketicon.png" alt="sportsicon">
   <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
   <img class="sportsicon" src="../../assets/images/tennisicon.png" alt="sportsicon">
   </div>
-</div><br>
+</div><br> -->
   <!-- sports available -->
   <!-- timings -->
-   <div class="timinginfo">
+   <!-- <div class="timinginfo">
   <h3 class="time">Timing</h3>
   <i class="fa-solid fa-clock"></i>
   <span>5:00AM -10:00PM</span>
-   </div><br>
+   </div><br> -->
     <!-- timings -->
-   </div>
+   <!-- </div> -->
   <!-- rules -->
-  <div class="rules">
+  <!-- <div class="rules">
  <h2> About it rules</h2>
  <p>For Football players are advised to wear shoes only on ground</p>
  <p>sharp metal football are not allowed </p>
- <p>For tennis 6 players are only allowed</p>
-   </div><br>
+ <p>For tennis 6 players are only allowed</p> -->
+   <!-- </div><br> -->
    <!-- rules -->
    <!-- price -->
-   <div class="price">
+   <!-- <div class="price">
  <p class="pricen">Price</p>
-<p class="pricelast"> 500</p>
-   </div><br>
+<p class="pricelast"> 500</p> -->
+   <!-- </div><br> -->
    <!-- price -->
    <!-- addplayers -->
-   <div class="addplayer">
+   <!-- <div class="addplayer">
  <h3>You can also Add players to play with </h3><br>
 <a href="../player/findplayers.html"> <button class="addplayers">Add players </button></a>
-   </div>
+   </div> -->
       <!-- addplayers -->
    
   
  
-</div>
+<!-- </div> -->
 <!-- sidebar1 -->
    
    <!-- sidebar2 -->
-   <div class="sidebar2">
+   <!-- <div class="sidebar2">
    <div class="booking1">
   <div class="book1">
-  <h1>
-  DNF TURF BOOKING
-  </h1><br><br><br><br>
-  </div>
-  <!-- date -->
+  <h1> -->
+  <!-- DNF TURF BOOKING -->
+  <!-- </h1><br><br><br><br>
+  </div> -->
+  <!-- date
   <div class="book2">
   <label class="headingbook">Date</label><br>
   <input type="date" id="date" aria-label=" date"><br>
 
- <span class="headingbook">TIMING</span><br>
- <!-- timing -->
+ <span class="headingbook">TIMING</span><br> -->
+ <!-- timing
  <select class="timings">
   <option>8:00AM-9:00AM</option>
   <option >9:00AM-10:00AM</option>
@@ -153,17 +154,17 @@
   <option>8:00PM-9:00PM</option>
   <option>9:00PM-10:00PM</option>
   
- </select><br>
+ </select><br> -->
  <!-- sports -->
- <span class="headingbook">SPORTS</span><br>
+ <!-- <span class="headingbook">SPORTS</span><br>
  <select class="sportss">
   <option>CRICKET</option>
   <option>TENNIS</option>
   <option>FOOTBALL</option>
 
   
- </select><br>
- <!-- duration -->
+ </select><br> -->
+ <!-- duration
  <span class="headingbook">Duration</span><br>
  <select class="durations">
   <option>Extra 1 hour</option>
@@ -171,8 +172,8 @@
   <option>Extra 3 hour</option>
 
   
- </select><br><br>
- <!-- players -->
+ </select><br><br> -->
+ <!-- players
  <span class="headingbook">Players</span><br>
  <select class="players">
   <option> 1 </option>
@@ -200,7 +201,7 @@
 
   
 
-   </div>
+   </div> -->
 <!-- sidebar2 -->
 </div>
    
@@ -247,6 +248,7 @@
 
 </div>
 </footer>
+<script src="../../assets/js/details.js"></script>
 
 
 </body>
