--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../../assets/css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
    </head>
 <body> 
     <!-- header -->
@@ -96,7 +98,7 @@
 <div class="sidebar2">
     <div class="container">
 <div class="top">
-    <h2>Get Help From Web</h2>
+    <h2 class="h2head">Get Help From Web</h2>
 </div>
 <div class="messagebox">
     <img class="assistant"src="../../assets/images/assistant.png" alt="assitant">
@@ -106,9 +108,9 @@
     <p class="messagefrom">Hello</p>
 </div>
 <div class="bottom">
-    <form >
+    <form id="sendbtn">
 <input type="text"  placeholder="Send message" id="message">
-<button>Send</button>
+<button id="send button"><i class='bx bx-send'></i></button>
     </form>
 </div>
     </div>
