--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -8,57 +8,64 @@
     <title>Book Ground</title>
     <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <link rel="stylesheet" href="../../assets/css/bookground.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
- <!-- header -->
-     <header>
- <input type="checkbox" id="check"/>
-   <label for="check" class="checkbtn">
-  <i class="fa-solid fa-bars"></i></label>
-    <ul>
-     <li><a href="../../index.html">Home</a> </li>
-     <li><a href="../player/findplayers.html">Find Players</a></li>
-    <li><a href="../../pages/contactus/contact.html">Contact us</a></li>
-    <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
-    </ul>
-    <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
+    <!-- header -->
+    <header>
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i></label>
+        <ul>
+            <li><a href="../../index.html">Home</a> </li>
+            <li><a href="../player/findplayers.html">Find Players</a></li>
+            <li><a href="../../pages/contactus/contact.html">Contact us</a></li>
+            <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
+        </ul>
+        <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
     </header>
-     <!-- header -->
-     
+    <!-- header -->
+
     <!-- main1 search-->
     <div class="main1">
-    <h3 class="content1">Search Grounds Around you</h3>
-    <img class="locationicon" src="../../assets/images/locationicon.gif" alt="locationicon">
-    <select class="locationselect">
-            <option>Chennai</option>
-            <option>Coimbatore</option>
-            <option>Salem</option>
-            <option>Erode</option>
-            <option>Madurai</option>
-            <option>Delhi</option>
-            <option>Bangalore</option>
-            <option>Pune</option>
-            <option>Kolkata</option>
+        <h3 class="content1">Search Grounds Around you</h3>
+        <img class="locationicon" src="../../assets/images/locationicon.gif" alt="locationicon">
+        <select class="locationselect" id="selectlocation">
+            <option value="">Select by City</option>
+            <option value="all">All Areas</option>
+            <option value="Chennai">Chennai</option>
+            <option value="Coimbatore">Coimbatore</option>
+            <option value="Salem">Salem</option>
+            <option value="Erode">Erode</option>
+            <option value="Madurai">Madurai</option>
+            <option value="Delhi">Delhi</option>
+            <option value="Bangalore">Bangalore</option>
+            <option value="Pune">Pune</option>
+            <option value="Kolkata">Kolkata</option>
 
-    </select>
-    <div class="content2">
-        <form class="searchnav">
-        <input type="search" placeholder="Search for place,cities,turf,ground names....." id="search2" />
-        <button class="searchbtn" type="submit" aria-label="search"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
+        </select>
+        <div class="content2">
+            <form class="searchnav">
+                <input type="search" placeholder="Search for place,cities,turf,ground names....." id="search2" />
+                <button class="searchbtn" type="submit" aria-label="search"><i
+                        class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
         </div>
     </div>
-  <!-- main1 search-->
+    <!-- main1 search-->
 
     <!-- main2 groundslist -->
     <div class="main2">
-       
-  <div class="parent">
-      <!-- <div class="child">
+
+        <div class="parent">
+            <!-- <div class="child">
          <br>
          <a href="../../pages/bookinground/ground1.html">
             <h3 class="groundn">DNS TURF</h3><br>
@@ -352,7 +359,7 @@
                 <a href="../../pages/bookinground/ground15.html"> <button class="book">Book Now</button></a>
                 </a>
             </div>    -->
-        </div> 
+        </div>
 
 
 
@@ -362,34 +369,36 @@
     <footer>
         <div id="footer1">
             <div class="row">
-            <div class="column1">
-             <h4 class="foot-heading">Company</h4><br>
+                <div class="column1">
+                    <h4 class="foot-heading">Company</h4><br>
 
-             <p><a href="#">About us</a> </p>
-            <p><a href="#">Privacy Policy</a></p>
-             <p><a href="#">Our Service</a></p>
-             <p><a href="#">Our Clients</a></p>
-             </div>
-
-            <div class="column1">
-             <h4 class="foot-heading">Get Help</h4><br>
-            <p><a href="#">FAQ</a> </p>
-            <p><a href="#">Contact</a></p>
+                    <p><a href="#">About us</a> </p>
+                    <p><a href="#">Privacy Policy</a></p>
+                    <p><a href="#">Our Service</a></p>
+                    <p><a href="#">Our Clients</a></p>
                 </div>
 
-         <div class="column1">
-           <h4 class="foot-heading">Connect us on</h4><br>
-           <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
-           <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
-            <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
-            <a href="#" aria-label="linkedin"> <i class="fa-brands fa-linkedin"></i> </a>
+                <div class="column1">
+                    <h4 class="foot-heading">Get Help</h4><br>
+                    <p><a href="#">FAQ</a> </p>
+                    <p><a href="#">Contact</a></p>
+                </div>
 
-         </div>
-         </div>
+                <div class="column1">
+                    <h4 class="foot-heading">Connect us on</h4><br>
+                    <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
+                    <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
+                    <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
+                    <a href="#" aria-label="linkedin"> <i class="fa-brands fa-linkedin"></i> </a>
+
+                </div>
+            </div>
         </div>
     </footer>
-<!-- footer -->
-<script src="../bookground.js"> </script>
+    <!-- footer -->
+    <script src="../../assets/js/bookground.js"> </script>
+
+    <script src="../../assets/js/is_logged.js"></script>
 
 </body>
 
