--- a/pages/bookinground/ground3.html
+++ b/pages/bookinground/ground3.html
@@ -102,9 +102,9 @@
   <!-- rules -->
 <div class="rules">
    <h2> About it rules</h2>
-   <p>For Football players are advised to wear shoes only on ground</p>
-   <p>sharp metal football are not allowed </p>
-   <p>For tennis 6 players are only allowed</p>
+   <p>For Football players are advised to wear shoes only on ground
+   sharp metal football are not allowed 
+   For tennis 6 players are only allowed</p>
      </div><br>
        <!-- rules -->
           <!-- price -->
