--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -34,6 +34,7 @@
 
   </div>
   <script>
+    
     function getData() {
       const email = (document.getElementById("email").value)
       const user_password = (document.getElementById("password").value)
@@ -41,30 +42,26 @@
 
       let userCollect;
       arrayConvert.find(element => {
-        if (element["user_as_ground"]["user_email"] == email && element["user_as_ground"]["user_password"] == user_password) {
+        if (element["user_email"] == email && element["user_password"] == user_password) {
           return userCollect = 1;
         }
         else {
-          return userCollect = 0
+          return userCollect = 0;
         }
       });
 
       if (userCollect == 1) {
-
-        localStorage.setItem("logged_in", email);
         // localStorage.setItem("user_name",name1)
-
-
+    
         window.location.href = "./accountcreated.html";
         alert("login success");
 
-
+        localStorage.setItem("logged_in", email);
       }
       else {
         alert("login failure");
       }
-      //     console.log(email);
-      // console.log(user_password);  
+
     }
 
 
