--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -143,7 +143,7 @@
                         <br>
 
                         <form>
-                            <label class="labelname"> Display Name:</label><br>
+                            <label class="labelname">Name:</label><br>
                             <input type="name" id="name1"><br>
 
                             <label class="labelname">Age :</label><br>
