fix: of user and ground page code

--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -118,7 +118,7 @@
    </div> -->
       <!-- addplayers -->
    
-  
+  <a href="../../pages/player/findplayers.html"
  
 <!-- </div> -->
 <!-- sidebar1 -->
