--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -37,7 +37,7 @@
 </div><br>
     <label >Phone Number:</label><br>
       <div class="boxform">
-    <input type="text" placeholder="Phone Number" id="user_phoneno" aria-label="phone number" name="mobile-number" required><br>
+    <input type="number" placeholder="Phone Number" id="user_phoneno" aria-label="phone number" name="mobile-number" required><br>
     <i class="fa-regular fa-circle-check"></i>
     <i class="fa-solid fa-circle-exclamation"></i>
 </div><br>
@@ -47,7 +47,7 @@
     <i class="fa-regular fa-circle-check"></i>
     <i class="fa-solid fa-circle-exclamation"></i>
 </div><br>
-    <p class="alert">By Entering the information you are expected receive <br>email or sms OTP when you are sign again</p><br>
+    <!-- <p class="alert">By Entering the information you are expected receive <br>email or sms OTP when you are sign again</p><br> -->
     <!-- <a href="../../pages/login/accountcreated.html" ><input type="button" value="Register" id="newlogin"></a> -->
     <!-- <button  id="newlogin" type="button" onclick="getUserData()" >Register</button><br> -->
 <div class="joinplayer">
@@ -73,9 +73,9 @@
         <p class="labelname">Known Sports:</p><br>
         <select id="sportss" required>
                
-        <option>Cricket</option>
-        <option>Football</option>
-        <option>Tennis</option>
+        <option value="Cricket">Cricket</option>
+        <option value="Football">Football </option>
+        <option value="Tennis">Tennis</option>
                
         </select><br>
         <p class="labelname">Location</p><br>
