--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -36,25 +36,27 @@
 </form>
       </div>
     <div class="selectsports">
-<p class="selectsportsword">Search by category</p>
+<!-- <p class="selectsportsword">Search by category</p>
  <select class="sportss">
 <option>CRICKET</option>
 <option>TENNIS</option>
 <option>FOOTBALL</option>
-       </select>
+       </select> -->
     </div>
     <p class="selectslocationword">Search by location</p>
     <img class="locationicon" src="../../assets/images/locationicon.gif" alt="locationicon">
     <select class="locationselect">
-            <option>Chennai</option>
-            <option>Coimbatore</option>
-            <option>Salem</option>
-            <option>Erode</option>
-            <option>Madurai</option>
-            <option>Delhi</option>
-            <option>Bangalore</option>
-            <option>Pune</option>
-            <option>Kolkata</option>
+      <option value="">Select by City</option>
+      <option value="all">All Areas</option>
+      <option value="Chennai">Chennai</option>
+      <option value="Coimbatore">Coimbatore</option>
+      <option value="Salem">Salem</option>
+      <option value="Erode">Erode</option>
+      <option value="Madurai">Madurai</option>
+      <option value="Delhi">Delhi</option>
+      <option value="Bangalore">Bangalore</option>
+      <option value="Pune">Pune</option>
+      <option value="Kolkata">Kolkata</option>
 
     </select>
 
