--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -127,7 +127,7 @@
                     <span>Friends Request</span>
                 </div>
 
-                <div class="logout">
+                <div class="logout" onclick="onDelete()">
                     <i class='bx bx-log-out'></i>
                     <span>Log out</span>
                 </div>
