--- a/pages/login/accountcreated.html
+++ b/pages/login/accountcreated.html
@@ -16,7 +16,7 @@
     <i class="fa-solid fa-check"></i><br>
     <h2 class="head">Your Account Successfuly Created</h2><br><br><br>
     <!-- button -->
-    <a href="../../pages/player/joinplayer.html" ><input type="button" value="Join As a Players" id="joinasplayers" aria-label="joinplayer"></a><br>
+    <!-- <a href="../../pages/player/joinplayer.html" ><input type="button" value="Join As a Players" id="joinasplayers" aria-label="joinplayer"></a><br> -->
     <a href="../../pages/bookinground/bookground.html" ><input type="button" value="Book Grounds" id="bookground" aria-label="bookgrounds"></a> 
      <!-- button -->
     </div>
