--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="../../index.html">Home</a> </li>
             <li><a href="../player/findplayers.html">Find Players</a></li>
-            <li><a href="../../pages/contactus/contact.html">Contact us</a></li>
+            <li class="contact"><a href="../../pages/contactus/contact.html">Contact us</a></li>
             <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
         </ul>
         <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
