--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -153,13 +153,25 @@
                         </form>
                         <div class="select">
                             <p class="labelname">Known Sports:</p><br>
-                            <select id="sportss"disabled>
+                            <!-- <select id="sportss"disabled>
 
                                 <option>Cricket</option>
                                 <option>Football</option>
                                 <option>Tennis</option>
 
-                            </select><br>
+                            </select><br> -->
+                            <div id="sportss">
+
+                                <input type="checkbox" id="sportsavail1" aria-label="sportsavail" value="Cricket" disabled>
+                                <label class="sportname">Cricket</label><br>
+                                <input type="checkbox" id="sportsavail2" aria-label="sportsavail" value="Football"disabled >
+                                <label class="sportname">Football</label><br>
+                                <input type="checkbox" id="sportsavail3" aria-label="sportsavail" value="Tennis" disabled>
+                                <label class="sportname">Tennis</label><br>
+                    
+                        
+                            </div><br>
+
                             <p class="labelname">Location</p><br>
                             <select id="locationselect" disabled>
                                 <option>Chennai</option>
