--- a/pages/admin/adminproduct.html
+++ b/pages/admin/adminproduct.html
@@ -50,21 +50,21 @@
         </div>
                     <div class="message">
                         <i class="fa-solid fa-message"></i>
-                        <span>Message</span>
+                        <span>Online Booking</span>
                     </div>
                     <div class="bookinghistory">
                         <i class='bx bx-history'></i>
-                        <span>Booking History</span>
+                        <span>Cash booking</span>
                     </div>
                     <div class="analytics">
                         <i class='bx bxs-analyse'></i>
-                        <span>Analytics</span>
+                        <span>My Ground</span>
                     </div>
                 </div>
                 <div class="hr">
 
                 </div>
-                <div class="friendslist">
+                <!-- <div class="friendslist">
                     <i class='bx bxs-group' ></i>
                     <span>Friends List</span>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="friendsrequest">
                     <i class='bx bx-group bx-tada' ></i>
                     <span>Friends Request</span>
-                </div>
+                </div> -->
 
                 <div class="logout">
                     <i class='bx bx-log-out'></i>
@@ -146,7 +146,7 @@
 
         </div>
     </div>
-<script src="../../assets/js/newprofile.js"></script>
+<script src=""></script>
 </body>
 
 </html>
