feat: added new feature if you want to join as a player

--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -62,7 +62,7 @@
 
      <div class="cont3">
       
-    <img class="userlogo1" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
+    <!-- <img class="userlogo1" src="../../assets/images/userlogo.png" alt="profilepicofplayer"> -->
     <a href="../../pages/player/newprofile.html"> <button class="userprofile">Your Profile</button></a></li>
       </div>
     </div>
